// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#user.activate should activate a suspended user 1`] = `
Object {
  "data": Object {
    "avatarUrl": "http://example.com/avatar.png",
    "createdAt": "2018-01-01T00:00:00.000Z",
    "email": "user1@example.com",
    "id": "46fde1d4-0050-428f-9f0b-0bf77f4bdf61",
    "isAdmin": false,
    "isSuspended": false,
    "name": "User 1",
    "username": "user1",
  },
  "ok": true,
  "status": 200,
}
`;

exports[`#user.activate should require admin 1`] = `
Object {
  "error": "admin_required",
  "message": "An admin role is required to access this resource",
  "ok": false,
  "status": 403,
}
`;

exports[`#user.delete should require authentication 1`] = `
Object {
  "error": "authentication_required",
  "message": "Authentication required",
  "ok": false,
  "status": 401,
}
`;

exports[`#user.demote should demote an admin 1`] = `
Object {
  "data": Object {
    "avatarUrl": "http://example.com/avatar.png",
    "createdAt": "2018-01-01T00:00:00.000Z",
    "email": "user1@example.com",
    "id": "46fde1d4-0050-428f-9f0b-0bf77f4bdf61",
    "isAdmin": false,
    "isSuspended": false,
    "name": "User 1",
    "username": "user1",
  },
  "ok": true,
  "status": 200,
}
`;

exports[`#user.demote should require admin 1`] = `
Object {
  "error": "admin_required",
  "message": "An admin role is required to access this resource",
  "ok": false,
  "status": 403,
}
`;

exports[`#user.demote shouldn't demote admins if only one available  1`] = `
Object {
  "error": "validation_error",
  "message": "At least one admin is required",
  "ok": false,
  "status": 400,
}
`;

exports[`#user.promote should promote a new admin 1`] = `
Object {
  "data": Object {
    "avatarUrl": "http://example.com/avatar.png",
    "createdAt": "2018-01-01T00:00:00.000Z",
    "email": "user1@example.com",
    "id": "46fde1d4-0050-428f-9f0b-0bf77f4bdf61",
    "isAdmin": true,
    "isSuspended": false,
    "name": "User 1",
    "username": "user1",
  },
  "ok": true,
  "status": 200,
}
`;

exports[`#user.promote should require admin 1`] = `
Object {
  "error": "admin_required",
  "message": "An admin role is required to access this resource",
  "ok": false,
  "status": 403,
}
`;

exports[`#user.suspend should require admin 1`] = `
Object {
  "error": "admin_required",
  "message": "An admin role is required to access this resource",
  "ok": false,
  "status": 403,
}
`;

exports[`#user.suspend should suspend an user 1`] = `
Object {
  "data": Object {
    "avatarUrl": "http://example.com/avatar.png",
    "createdAt": "2018-01-01T00:00:00.000Z",
    "email": "user1@example.com",
    "id": "46fde1d4-0050-428f-9f0b-0bf77f4bdf61",
    "isAdmin": false,
    "isSuspended": true,
    "name": "User 1",
    "username": "user1",
  },
  "ok": true,
  "status": 200,
}
`;

exports[`#user.suspend shouldn't allow suspending the user themselves 1`] = `
Object {
  "error": "validation_error",
  "message": "Unable to suspend the current user",
  "ok": false,
  "status": 400,
}
`;

exports[`#user.update should require authentication 1`] = `
Object {
  "error": "authentication_required",
  "message": "Authentication required",
  "ok": false,
  "status": 401,
}
`;

exports[`#user.update should update user profile information 1`] = `
Object {
  "data": Object {
    "avatarUrl": "http://example.com/avatar.png",
    "createdAt": "2018-01-01T00:00:00.000Z",
    "email": "user1@example.com",
    "id": "46fde1d4-0050-428f-9f0b-0bf77f4bdf61",
    "isAdmin": false,
    "isSuspended": false,
    "name": "New name",
    "username": "user1",
  },
  "ok": true,
  "status": 200,
}
`;
